[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = "0.4"
chrono-tz = "0.10"
inventory = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
tokio-cron-scheduler = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0" }

anvil-macros = { path = "crates/anvil-macros" }
