[package]
name = "anvil-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
inventory.workspace = true
tokio.workspace = true
tokio-cron-scheduler.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

anvil-macros.workspace = true


[[example]]
name = "api"
path = "../../examples/api.rs"
